k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rideshare
  labels:
    app.kubernetes.io/part-of: rideshare
    istio-injection: disabled
