k8s/base/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kongs-gateway-ingress
  namespace: rideshare
  annotations:
    konghq.com/plugins: rate-limit-api, cors-api
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: api.rideshare.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
